--- a/Colony Wars/nbproject/private/private.properties
+++ b/Colony Wars/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/KaanCakmak/Library/Application Support/NetBeans/8.2/build.properties
+user.properties.file=/home/emre/.netbeans/8.1/build.properties
